# labs

./: LICENSE  README.md
FirstYear/BAP/FirstSemester/lab1/: README.md  comp.sh
FirstYear/BAP/FirstSemester/lab1/src/: Source.cpp
FirstYear/BAP/FirstSemester/lab2/: README.md  comp.sh
FirstYear/BAP/FirstSemester/lab2/src/: .Source.cpp.swp  Source.cpp
FirstYear/BAP/FirstSemester/lab3/: README.md
FirstYear/BAP/FirstSemester/lab3/src/: Source.cpp
SecondYear/ProgramDesign/lab1/: README.md  compile.sh
SecondYear/ProgramDesign/lab1/src/: Programm.cpp  Programm.hpp  main.cpp
SecondYear/ProgramDesign/lab2/: README.md
SecondYear/ProgramDesign/lab2/src/: CMakeLists.txt  main.cpp
SecondYear/ProgramDesign/lab2/src/Console/: CMakeLists.txt  ConsoleInp.cpp  ConsoleInp.hpp  ConsoleOut.cpp  ConsoleOut.hpp
SecondYear/ProgramDesign/lab2/src/Menu/: CMakeLists.txt  menu.cpp  menu.hpp
SecondYear/ProgramDesign/lab2/src/Student/: CMakeLists.txt  student.cpp  student.hpp
SecondYear/ProgramDesign/lab2/src/StudentList/: CMakeLists.txt  StudentList.cpp  StudentList.hpp
SecondYear/ProgramDesign/lab3/: README.md  comp.sh  link.sh
SecondYear/ProgramDesign/lab3/src/: macros.mac  rem_word.asm
SecondYear/ProgramDesign/lab4/: README.md  comp.sh
SecondYear/ProgramDesign/lab4/src/: func.asm  source.c
